ddashboard composant user 1 v1

--- a/templates/structure/sidebar.html.twig
+++ b/templates/structure/sidebar.html.twig
@@ -20,7 +20,7 @@
             <span class="hide-menu">Accueil</span>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="{{path('app_inventory')}}" aria-expanded="false">
+            <a class="sidebar-link" href="{{path('app_dashboard')}}" aria-expanded="false">
               <span>
                 <i class="ti ti-layout-dashboard"></i>
               </span>
