--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
     <link rel="stylesheet" href="{{ asset('css/styleFooter.css') }}">
     <link rel="stylesheet" href="{{ asset('css/styleheader.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/styleDashboard.css') }}">
 </head>
 <body>
   {% include 'structure/header.html.twig' %}
