--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -54,6 +54,7 @@
             {% for user in users %}
                 <div class="user-row">
                     <span class="user-info">{{ user.username }}</span>
+                    <span class="user-info">{{ user.email }}</span>
                     <div class="actions">
                         <button class="btn settings"><img src="{{ asset('asset/icons/manager.png') }}" class="ti icon"></button>
                         <button class="btn email"><img src="{{ asset('asset/icons/message.png') }}" class="ti icon"></button>
