--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -109,3 +109,8 @@ h1 {
     border-radius: 8px; /* Arrondit les angles */
     overflow: hidden; /* Assure que les coins arrondis sont appliqués correctement */
 }
+
+.iconplus{
+    width: 20px;
+    margin-top: -3px;
+}
