--- a/templates/structure/sidebar.html.twig
+++ b/templates/structure/sidebar.html.twig
@@ -64,7 +64,7 @@
             <span class="hide-menu">Paramètres</span>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="#" aria-expanded="false">
+            <a class="sidebar-link" href="{{path('app_profil')}}" aria-expanded="false">
               <span>
                 <img src="{{ asset('asset/icons/profil.png') }}" class="ti icon">
               </span>
