--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,3 +114,53 @@ h1 {
     width: 20px;
     margin-top: -3px;
 }
+
+/* Profil.html.twig */
+
+.avatarprofil{
+    width: 200px;
+    border-radius: 50%;
+    margin-left: 5%;
+    margin-bottom: 20px;
+    display: block;
+}
+
+.modifybtn {
+    display: block;
+    width: 200px;
+    height: 40px;
+    margin-left: 5%;
+    border-radius: 10px;
+    background-color: #335ADA;
+}
+
+.profile-container {
+    display: flex;
+    align-items: center;
+}
+
+.avatar-and-button {
+    margin-right: 20px; /* Ajustez cette valeur selon vos besoins */
+}
+
+.info {
+    flex-grow: 1;
+    margin-left: 100px;
+}
+
+.info-title {
+    font-weight: bold;
+    display: inline-block;
+    width: 150px; /* Ajustez cette valeur selon vos besoins */
+}
+
+.info p {
+    display: flex;
+    align-items: center;
+}
+
+.profiltitle{
+    font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 5%;
+}
