--- a/public/css/styleheader.css
+++ b/public/css/styleheader.css
@@ -99,3 +99,19 @@
     padding: 20px; /* Espacement interne */
 }
 
+
+.theme1-sidebar { background-color: #1A202C; }
+.theme1-footer { background-color: #1A202C; }
+.theme1-header { background-color: #42506C; }
+        
+.theme2-sidebar { background-color: #1B1B1B; }
+.theme2-footer { background-color: #1B1B1B; }
+.theme2-header { background-color: #737373; }
+
+.theme3-sidebar { background-color: #940f0f; }
+.theme3-footer { background-color: #940f0f; }
+.theme3-header { background-color: #191919; }
+
+.theme4-sidebar { background-color: #0E5600; }
+.theme4-footer { background-color: #157F00; }
+.theme4-header { background-color: #282828; }
