--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -164,3 +164,11 @@ h1 {
     font-weight: bold;
     margin-bottom: 5%;
 }
+
+.theme1-sidebar { background-color: #1A202C; }
+.theme1-footer { background-color: #1A202C; }
+.theme1-header { background-color: #42506C; }
+        
+.theme2-sidebar { background-color: #1B1B1B; }
+.theme2-footer { background-color: #1B1B1B; }
+.theme2-header { background-color: #737373; }
