--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,8 @@
                 logo.src = '{{ asset('../asset/edured.png') }}';
             } else if (theme === 'theme4') {
                 logo.src = '{{ asset('../asset/edugreen.png') }}';
+            } else if (theme === 'theme5') {
+                logo.src = '{{ asset('../asset/edupurple.png') }}';
             }
         });
     </script>
