--- a/templates/setting/setting.html.twig
+++ b/templates/setting/setting.html.twig
@@ -18,6 +18,7 @@
             <option value="theme2" {% if current_theme == 'theme2' %}selected{% endif %}>Sombre</option>
             <option value="theme3" {% if current_theme == 'theme3' %}selected{% endif %}>Peps</option>
             <option value="theme4" {% if current_theme == 'theme4' %}selected{% endif %}>Naturel</option>
+            <option value="theme5" {% if current_theme == 'theme5' %}selected{% endif %}>Purple</option>
         </select>
         <button type="submit">Changer le thème</button>
     </form>
