--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ asset('css/styleFooter.css') }}">
     <link rel="stylesheet" href="{{ asset('css/styleheader.css') }}">
     <link rel="stylesheet" href="{{ asset('css/styleDashboard.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/setting.css') }}">
 </head>
 <body class="{{ app.session.get('theme', 'theme1') }}">
     <header class="header {{ app.session.get('theme', 'theme1') }}-header">
@@ -47,7 +48,9 @@
                 logo.src = '{{ asset('../asset/edugreen.png') }}';
             } else if (theme === 'theme5') {
                 logo.src = '{{ asset('../asset/edupurple.png') }}';
-            }
+            }  else if (theme === 'theme6') {
+                logo.src = '{{ asset('../asset/edu2.png') }}';
+            } 
         });
     </script>
     {% block javascripts %}
